plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'auth-service'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudAzureVersion', "5.19.0")
}

dependencies {

	// web flux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'

	// test
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	//implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory'
	// security
	//implementation 'org.springframework.boot:spring-boot-starter-security'
	//testImplementation 'org.springframework.security:spring-security-test'

	// for keyclock
	//implementation 'org.keycloak:keycloak-spring-boot-starter:25.0.3'
	//implementation 'org.keycloak:keycloak-spring-security-adapter:25.0.3'

	// swagger
	//implementation 'org.springdoc:springdoc-openapi-webflux-core:1.8.0'
	//implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.8.0'
//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-api:2.2.0'

	// postgres
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc:3.4.3'
	runtimeOnly 'org.postgresql:r2dbc-postgresql'

	//flyway
	implementation 'org.flywaydb:flyway-core:11.3.4'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springframework:spring-jdbc'
	runtimeOnly 'org.postgresql:postgresql'


	// lombok
	compileOnly 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'

}

dependencyManagement {
	imports {
		mavenBom "com.azure.spring:spring-cloud-azure-dependencies:${springCloudAzureVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
